--- a/code/index.html
+++ b/code/index.html
@@ -8,22 +8,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
-
-  
-
-
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-
-
   <!-- logo and navbar -->
-
+  
   <header>
     <nav class="navigation">
       <img class="logo" src="./images/logoa.png" alt="Logo">
@@ -63,7 +55,6 @@
 
   <section class="news-cards">
 
-
     <div class="card">
       <h4>DESIGN</h4>
       <img class="news-image" src="./images/lance.jpg" alt="Lance">
@@ -73,14 +64,12 @@
     <div class="card">
       <h4>AWARD</h4>
       <img class="news-image" src="./images/chris.jpg" alt="Chris">
-      <p>For coffered ceiling inside the entrance atrium architect first used in domestic architecture, glass block
-        ceiling. <br> <a href="#">Read more >></a> </p>
+      <p>For coffered ceiling inside the entrance atrium architect first used in domestic architecture, glass block ceiling. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>INTERIOR</h4>
       <img class="news-image" src="./images/martin.jpg" alt="Martin">
-      <p>On the street facade highlights the many tall windows with white woodwork and shutters in one sector and the
-        other cut on the stone. <br><a href="#">Read more >></a> </p>
+      <p>On the street facade highlights the many tall windows with white woodwork and shutters in one sector and the other cut on the stone. <br><a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>INTERIOR</h4>
@@ -91,8 +80,7 @@
     <div class="card">
       <h4>NEWS</h4>
       <img class="news-image" src="./images/pawel.jpg" alt="Pawel">
-      <p>The long, narrow site designated for the new library presented some technical challenges, including the need to
-        consider the future construction of a tunnel. <br> <a href="#">Read more >></a> </p>
+      <p>The long, narrow site designated for the new library presented some technical challenges, including the need to consider the future construction of a tunnel. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>AWARDS</h4>
@@ -102,8 +90,7 @@
     <div class="card">
       <h4>DESIGN</h4>
       <img class="news-image" src="./images/adrien.jpg" alt="Adrien">
-      <p>The building is a public space owned by citizens and open to all people. Its design was done by encouraging
-        active participation among residents and partners. <br> <a href="#">Read more >></a> </p>
+      <p>The building is a public space owned by citizens and open to all people. Its design was done by encouraging active participation among residents and partners. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>OFFICE</h4>
@@ -124,8 +111,7 @@
   <!-- Footer section   -->
   <footer>
     <p class="footer-info"> © 2021 Pınar Demirel Etli <a href="https://github.com/pdetli"> <i class="fa fa-github" style="font-size:24px"></i> </a> </p>
-    <p class="footer-info">This page was made as a student project during the <a
-        href="https://www.technigo.io/">Technigo </a> Boot Camp.</p>
+    <p class="footer-info">This page was made as a student project during the <a href="https://www.technigo.io/">Technigo </a> Boot Camp.</p>
   </footer>
 
 </body>
