Fixed bugs and cleaned up some css after code review comments

--- a/code/index.html
+++ b/code/index.html
@@ -13,12 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <!--Title font: "Averia Serif Libre"-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300&display=swap" rel="stylesheet">
   <!--Signature font: Nothing You Could Do-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <title>WWN</title>
     <link rel="icon" href="./new_logo.png" type="image" sizes="any">
 </head>
@@ -27,7 +27,7 @@
 
   <header class="header-grid-container">
     <div class="grid-pic">
-      <img src="./new_logo.png"/>
+      <img src="./new_logo.png" alt="White dove with 3 color background"/>
     </div>
     <div class="title-grid">
       <h1>WORLD WILD NEWS</h1>
@@ -58,7 +58,7 @@
 
   </div>
 
-  <div class="body-section-grid">
+  <article class="body-section-grid">
 
     <div class="smallnews-grid">
       <h3>The viral Cat God</h3>
@@ -101,7 +101,7 @@
       <p>Designed and developed by </p>
       <p class="signature">Lovisa Carling</p>
     </footer>
-  </div>
+  </article>
   </section>
 
 
