updated desktop button link

--- a/code/index.html
+++ b/code/index.html
@@ -59,7 +59,7 @@
         </h2>
         <p>All the beautiful photos below are from by Kristina Alexanderson's Flickr album A reflection of a princess (or me). </p>
         <button class="btn news-btn">
-          <a href="https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg">My button</a>
+          <a href="https://flic.kr/s/aHsmuxMFbv">My button</a>
         </button>
       </div>
       </section>
