fixed details and removed redundant styles based on code review

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
     rel="stylesheet">
   <!--Script for the Social Media Icons-->
   <script src="https://kit.fontawesome.com/25eebd79b0.js" crossorigin="anonymous"></script>
-  <!--For the fav icons-->
+  <!--Favicons for my own logo-->
   <link rel="apple-touch-icon" sizes="180x180" href="./resources/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./resources/favicons/favicon-32x32.png">
   <link rel=" icon" type="image/png" sizes="16x16" href="./resources/favicons/favicon-16x16.png">
@@ -29,9 +29,9 @@
     <header>
       <!-- Logo and navbar -->
       <div class="nav-bar">
+        <!--Logo created with the logo generator tool by hatchful.shopify.com-->
         <img class="logo-transparent" src="./resources/img/brand-assets/logo.png" alt="nuntii logo">
         <nav>
-          <!--Logo created with the logo generator tool by hatchful.shopify.com-->
           <ul class="main-nav">
             <li><a href="#jump-to-main">Today's News</a></li>
             <li><a href="#jump-to-featured">Featured</a></li>
@@ -83,12 +83,12 @@
     <section class="featured-news" id="jump-to-featured">
       <div class="featured-news-container">
         <h2 class="featured-title">Featured news</h2>
-        <main class="grid">
+        <main class="featured-grid">
           <!-- A grid containing several secondary news -->
           <article>
             <img class="featured-image" src="./resources/img/site-content/chino-rocha-P69rwd0vyHw-unsplash.jpg"
               alt="elderly couple wedding">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>Renewed vows</h3>
               <p>Elderly couple finally gets to celebrate 50th anniversary postponed by the pandemic.</p>
               <a class="read-more-link"
@@ -100,7 +100,7 @@
           <article>
             <img class="featured-image" src="./resources/img/site-content/rachel-barkdoll-Ns0wpr-DO-g-unsplash.jpg"
               alt="woman playing baseball">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>Baseball Dream</h3>
               <p class="featured-paragraph">70 year-old NY Yankees fan serves as a bat girl (her lifetime dream).</p>
               <a class="read-more-link"
@@ -112,7 +112,7 @@
           <article>
             <img class="featured-image" src="./resources/img/site-content/nick-fewings--2lJGRIY5P0-unsplash.jpg"
               alt="plastic waste">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>India vs. Plastic</h3>
               <p class="featured-paragraph">The Indian government banned a long list of single-use plastics, like
                 cutlery
@@ -125,7 +125,7 @@
           <article>
             <img class="featured-image" src="./resources/img/site-content/blaz-erzetic-lVPeU3K44I8-unsplash.jpg"
               alt="woman listening to music">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>Empathy and Music</h3>
               <p class="featured-paragraph">The brain of people who are very empathetic processes music differently!</p>
               <a class="read-more-link"
@@ -136,7 +136,7 @@
           <article>
             <img class="featured-image" src="./resources/img/site-content/jonathan-borba-lrQPTQs7nQQ-unsplash.jpg"
               alt="woman exercising">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>Epic Metabolism</h3>
               <p class="featured-paragraph">Your metabolism doesn't slown down after your 30s, as we previously thought.
               </p>
@@ -148,7 +148,7 @@
           <article>
             <img class="featured-image" src="./resources/img/site-content/david-brooke-martin-50cGSHm1Jro-unsplash.jpg"
               alt="figure of a gnome meditating">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>Superhero Brain</h3>
               <p>Meditation for 10 minutes a day can make help you focus and make your brain quicker.</p>
               <a class="read-more-link"
@@ -160,7 +160,7 @@
           <article>
             <img class="featured-image" src="./resources/img/site-content/andre-benz-Mn9Fa_wQH-M-unsplash.jpg"
               alt="city">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>Cities against Depression</h3>
               <p>New research suggests that human interaction in big cities can protect us from depression.</p>
               <a class="read-more-link"
@@ -172,7 +172,7 @@
           <article>
             <img class="featured-image" src="./resources/img/site-content/miranda-richey-_ZbwdLTnuso-unsplash.jpg"
               alt="tiger">
-            <div class="featured-single">
+            <div class="featured-news-text">
               <h3>Tiger Comeback</h3>
               <p>Tiger population in Indian national park bounces back from zero to 48 tigers.</p>
               <a class="read-more-link"
