fixed typo on featured-news

--- a/code/index.html
+++ b/code/index.html
@@ -150,7 +150,7 @@
               alt="figure of a gnome meditating">
             <div class="featured-news-text">
               <h3>Superhero Brain</h3>
-              <p>Meditation for 10 minutes a day can make help you focus and make your brain quicker.</p>
+              <p>Meditation for 10 minutes a day can help you focus and make your brain quicker.</p>
               <a class="read-more-link"
                 href="https://www.positive.news/lifestyle/health/meditating-can-make-your-brain-quicker-how-to-meditate/"
                 target="_blank">Read
