aligned read-more-link by using a grid in the article tag

--- a/code/index.html
+++ b/code/index.html
@@ -37,7 +37,6 @@
             <li><a href="#jump-to-featured">Featured</a></li>
             <li><a href="https://wisdomquotes.com/positive-quotes/" target="_blank">Inspiration</a></li>
             <li><a href="#jump-to-footer">Contact</a></li>
-            </a>
           </ul>
         </nav>
       </div>
@@ -114,7 +113,7 @@
               alt="plastic waste">
             <div class="featured-news-text">
               <h3>India vs. Plastic</h3>
-              <p class="featured-paragraph">The Indian government banned a long list of single-use plastics, like
+              <p class="featured-paragraph">The country banned a long list of single-use plastics, like
                 cutlery
                 and thin bags.</p>
               <a class="read-more-link"
@@ -161,8 +160,8 @@
             <img class="featured-image" src="./resources/img/site-content/andre-benz-Mn9Fa_wQH-M-unsplash.jpg"
               alt="city">
             <div class="featured-news-text">
-              <h3>Cities against Depression</h3>
-              <p>New research suggests that human interaction in big cities can protect us from depression.</p>
+              <h3>Cities vs. Depression</h3>
+              <p>Human interaction in big cities can protect us from depression.</p>
               <a class="read-more-link"
                 href="https://www.positive.news/lifestyle/wellbeing/can-big-cities-protect-us-from-depression-researchers-think-so/"
                 target="_blank">Read
