shortened the copy to adjust it to the featured-news grid

--- a/code/index.html
+++ b/code/index.html
@@ -89,7 +89,7 @@
               alt="elderly couple wedding">
             <div class="featured-news-text">
               <h3>Renewed vows</h3>
-              <p>Elderly couple finally gets to celebrate 50th anniversary postponed by the pandemic.</p>
+              <p>Elderly couple celebrates 50th anniversary postponed by Covid.</p>
               <a class="read-more-link"
                 href="https://www.today.com/news/couple-renews-vows-live-today-after-pandemic-postponed-50th-anniversary-t224083"
                 target="_blank">Read
@@ -126,7 +126,7 @@
               alt="woman listening to music">
             <div class="featured-news-text">
               <h3>Empathy and Music</h3>
-              <p class="featured-paragraph">The brain of people who are very empathetic processes music differently!</p>
+              <p class="featured-paragraph">People who are very empathetic processes music differently!</p>
               <a class="read-more-link"
                 href="https://www.goodnewsnetwork.org/highly-empathetic-process-music-differently-smu/"
                 target="_blank">Read more</a>
@@ -137,7 +137,7 @@
               alt="woman exercising">
             <div class="featured-news-text">
               <h3>Epic Metabolism</h3>
-              <p class="featured-paragraph">Your metabolism doesn't slown down after your 30s, as we previously thought.
+              <p class="featured-paragraph">Your metabolism doesn't slown down with age, as we previously thought.
               </p>
               <a class="read-more-link"
                 href="https://www.goodnewsnetwork.org/metabolism-does-not-slow-down-in-midlife-adulthood/"
@@ -149,7 +149,7 @@
               alt="figure of a gnome meditating">
             <div class="featured-news-text">
               <h3>Superhero Brain</h3>
-              <p>Meditation for 10 minutes a day can help you focus and make your brain quicker.</p>
+              <p>10-min. meditation a day can help you focus and make your brain quicker.</p>
               <a class="read-more-link"
                 href="https://www.positive.news/lifestyle/health/meditating-can-make-your-brain-quicker-how-to-meditate/"
                 target="_blank">Read
@@ -173,7 +173,7 @@
               alt="tiger">
             <div class="featured-news-text">
               <h3>Tiger Comeback</h3>
-              <p>Tiger population in Indian national park bounces back from zero to 48 tigers.</p>
+              <p>Indian national park bounces back from zero to 48 tigers.</p>
               <a class="read-more-link"
                 href="https://www.positive.news/society/positive-news-stories-from-week-29-of-2021/"
                 target="_blank">Read more</a>
