fixed the copy again to adjust it to the articles

--- a/code/index.html
+++ b/code/index.html
@@ -114,8 +114,7 @@
             <div class="featured-news-text">
               <h3>India vs. Plastic</h3>
               <p class="featured-paragraph">The country banned a long list of single-use plastics, like
-                cutlery
-                and thin bags.</p>
+                cutlery.</p>
               <a class="read-more-link"
                 href="https://www.goodnewsnetwork.org/india-bans-long-list-of-single-use-plastics/" target="_blank">Read
                 more</a>
