took away ID on footer

--- a/code/index.html
+++ b/code/index.html
@@ -75,7 +75,7 @@
     </section>
 
     <footer>
-      <p class="footer-text" id="about-footer">&copy 2021 BumBumBurka</p>
+      <p class="footer-text">&copy 2021 BumBumBurka</p>
     </footer>
   </body>
 </html>
