Less width for each article to populate four per row in desktop view

--- a/code/index.html
+++ b/code/index.html
@@ -90,6 +90,26 @@
                     </p>
                     <a href="#">Tuck me in!</a>
                 </li>
+                <li id="article-5">
+                    <figure>
+                        <img src="./img/article3.jpg" alt="Puggle our in the forest" />
+                        <figcaption><h2>Puggles love to hunt</h2></figcaption>
+                    </figure>
+                    <p>
+                        The Beagle part of the Puggle dictates the need to hunt. And when a prey is found, they sound the alarm to their treat-givers. Who's a good boy?
+                    </p>
+                    <a href="#">To the Hunt!</a>
+                </li>
+                <li id="article-6">
+                    <figure>
+                        <img src="./img/article4.jpg" alt="Cozy Puggle in their bed" />
+                        <figcaption><h2>Puggles cozy up a lot</h2></figcaption>
+                    </figure>
+                    <p>
+                        The Pug of a Puggle just wants to cozy up with you and sleep. And to get treats. And pets. Did you know about the overflow-neck of Puggles? Very pinchable.
+                    </p>
+                    <a href="#">Tuck me in!</a>
+                </li>
             </ul>
         </section>
 
