--- a/code/index.html
+++ b/code/index.html
@@ -41,9 +41,10 @@
       <img class="big-news-image" src="/code/img/queen of code.jpg" alt="code" />
       <div class="text">
         <h1>Queen of Code #1.</h1>
-        <p class="big-news-text">The future is technology, and the youth have a fundamental role to shape this future.
-        </p>
-        <button class="read-more" type="button">Read More</button>
+        <p class="big-news-text">Computer programming once had much better gender balance than it does today. What went
+          wrong?</p>
+        <button class="read-more" type="button">We Need More Women In Tech! Read aboot the fab queens
+          on code</button>
       </div>
     </div>
   </section>
@@ -52,81 +53,63 @@
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen </h3>
       <img class="news-img" src="/code/img/queen2.jpg" alt="women">
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it.</p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
       <img class="news-img" src="/code/img/queen2.jpg" alt="women">
-      <p>n Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it. </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
       <img class="news-img" src="/code/img/queen2.jpg" alt="women">
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it. </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
       <img class="news-img" src="/code/img/queen2.jpg" alt="women">
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it. </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
       <img class="news-img" src="img/queen3.jpg" alt="women">
 
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced
-        and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it.</p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
 
       <img class="news-img" src="img/queen3.jpg" alt="women">
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced
-        and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it.</p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
       <img class="news-img" src="img/queen3.jpg" alt="women">
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced
-        and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it.
+      </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
       <img class="news-img" src="img/queen3.jpg" alt="women">
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced
-        and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
+      <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
+        I dream it, I work hard, I grind 'til I own it.</p>
     </div>
 
-    <div class="news-card-child">
-      <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="img/queen3.jpg" alt="women">
-      <p>In Addis Ababa, Ethiopia, Artificial Intelligence and Bioinformatics research is part of the services rendered
-        by iCog Labs. In July this year, Ethiopia was one of the few countries to host Sophia, “one of the world’s most
-        advanced
-        and perhaps most famous artificial intelligence (AI) humanoid robot.”</p>
-    </div>
+
   </section>
 
   <footer>
