Did some final adjustments based on comments from PR

--- a/code/index.html
+++ b/code/index.html
@@ -64,10 +64,10 @@
         <div class="big-news-text-container">
           <div class="big-news-text">
             <a href="#">
-              <h3>
+              <h1>
                 Scenes from Afghanistan: U.S. troops struggle to secure the
                 airport for their evacuation.
-              </h3>
+              </h1>
               <span>
                 The Taliban control all of Kabul where Hamid Karzai
                 International airport is located.
@@ -77,9 +77,9 @@
 
           <div class="big-news-text">
             <a href="#">
-              <h3>
+              <h1>
                 How the Taliban turned social media into a tool for control
-              </h3>
+              </h1>
               <span>
                 They banned the internet. Now they use it to threaten the Afghan
                 people.
@@ -89,9 +89,9 @@
 
           <div class="big-news-text">
             <a href="#">
-              <h3>
+              <h1>
                 A celebrated Afghan school fears the Taliban will stop the music
-              </h3>
+              </h1>
               <span>
                 The Afghanistan National Institute of music became a symbol of
                 the country's changing identity.
@@ -104,7 +104,7 @@
       <!-- ---------- OTHER NEWS CONTAINER --------------->
 
       <section class="other-news-container">
-        <div class="other-news item-1">
+        <div class="other-news">
           <img
             class="other-news-pictures"
             src="./medications-image.jpg"
@@ -122,7 +122,7 @@
             </div>
           </a>
         </div>
-        <div class="other-news item-2">
+        <div class="other-news item-reverse">
           <a href="#">
             <div class="other-news-text-container">
               <span class="other-news-bold">
@@ -140,7 +140,7 @@
             alt="A photograph of three hospital beds"
           />
         </div>
-        <div class="other-news item-3">
+        <div class="other-news">
           <img
             class="other-news-pictures"
             src="./hurricane.jpg"
@@ -159,7 +159,7 @@
             </div>
           </a>
         </div>
-        <div class="other-news item-4">
+        <div class="other-news item-reverse">
           <a href="#">
             <div class="other-news-text-container">
               <span class="other-news-bold">
@@ -178,7 +178,7 @@
             alt="A photograph of a Car"
           />
         </div>
-        <div class="other-news item-5">
+        <div class="other-news">
           <img
             class="other-news-pictures"
             src="./vietnam.jpg"
@@ -187,17 +187,17 @@
           <a href="#">
             <div class="other-news-text-container">
               <span class="other-news-bold">
-                Vietnam War Victims Wanted Justice
+                Vietnam war victims want Justice
               </span>
               <span class="other-news-thin">
                 South Korean troops, the largest foreign contingent fighting
-                alongside U.S. soldiers during Vietnam War, have been dogged by
-                brutality allegations.
+                alongside U.S. soldiers, have been dogged by brutality
+                allegations.
               </span>
             </div>
           </a>
         </div>
-        <div class="other-news item-6">
+        <div class="other-news item-reverse">
           <a href="#">
             <div class="other-news-text-container">
               <span class="other-news-bold"> Thousands flee a lost war </span>
@@ -237,7 +237,7 @@
       <!-- ---------- DAILY POLAROIDS --------------->
 
       <section class="daily-polaroids">
-        <h3 class="daily-polaroid-header" id="daily">The daily polaroid</h3>
+        <h1 class="daily-polaroid-header" id="daily">The daily polaroid</h1>
         <div class="daily-polaroid-container">
           <div class="flip-card">
             <div class="flip-card-inner">
