Updated code after reviews

--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
 
 <body class="main-grid">
   <header class="header">
-    <a href="" class="logo">Mercedes <span style="color:#FF0000;">
+    <nav><a  href="" class="logo">Mercedes <span style="color:#FF0000;">
         F1</span>Magazine</a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -28,8 +28,10 @@
       <li><a href="">Archive</a></li>
       <li><a href="">Contact</a></li>
     </ul>
+    </nav>
   </header>
 
+  
   <div class="hero-image"> <img src="images/f1_car.jpg" alt="Formula One Car driving"></div>
 
   <div class="grid-container">
