correcting som code

--- a/code/index.html
+++ b/code/index.html
@@ -52,28 +52,28 @@
   <section class="news-cards-parent">
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen </h3>
-      <img class="news-img" src="/code/img/queen2.jpg" alt="women">
+      <img class="news-img" src="/code/img/queen3.jpg" alt="women">
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it.</p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="/code/img/queen2.jpg" alt="women">
+      <img class="news-img" src="img/queen3.jpg">
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it. </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="/code/img/queen2.jpg" alt="women">
+      <img class="news-img" src="/code/img/queen3.jpg">
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it. </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="/code/img/queen2.jpg" alt="women">
+      <img class="news-img" src="/code/img/queen3.jpg" alt="women">
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it. </p>
     </div>
