Changes after the codereview

--- a/code/index.html
+++ b/code/index.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
   </head>
   <body>
+
+    <!-- Logo and Navbar -->
     <header>
-      <!-- Some kind of logo and navbar -->
       <img class="logo" src="Katt-logga.png" alt="logga med kattmotiv">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
       <nav class="nav-bar">
         <a href="https://www.youtube.com/watch?v=k0QhnMJnJE0">Menu</a> 
         <a href="https://en.wikipedia.org/wiki/Cat">About</a>
@@ -22,12 +21,13 @@
       </nav> 
     </header>
 
-    <div class="tidningens-logga">
+    <div class="newspaper-logo">
       <h1>The cat magazine</h1>
     </div>
 
+
+    <!-- The big news -->
     <section class="big-news">
-      <!-- The big news content -->
       <div class="big-news-text">
         <h1>The story about the epic cat</h1>
 
@@ -37,9 +37,10 @@
     </div>
     </section>
 
+
+    <!-- The Small news  -->
     <h1 class="small-news-h1">Heading</h1>
     <section class="small-news">
-      <!-- The other news  -->
       <div class="text-pic">
         <div class="text-pic-content">
           <h2>Story</h2>
@@ -108,6 +109,8 @@
       </div>
     </section>
   </body>
+
+   <!-- Footer  -->
   <footer>
     <img src="instagram-71-227895.png" alt="instagram icon">
     <img src="facebook-3017395-2508544.png" alt="facebook icon">
